# patina-mtrr

./: Cargo.toml  LICENSE  Makefile.toml  README.md  cheatsheet.md  cspell.yml  deny.toml  rustfmt.toml  todo.md
.azurepipelines/: PrGate.yml  template-prgate.yml
.config/: tsaoptions.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: crate-version-updater.yml  publish-release.yml
docs/: mtrr.md  x64_paging.md
src/: edk_error.rs  error.rs  hal.rs  lib.rs  mtrr.rs  reg.rs  structs.rs  utils.rs
src/tests/: mock_hal.rs  mtrr_tests.rs  support.rs
tests/: mtrr_tests.rs  support.rs
tests/common/: mod.rs  structs.rs  support.rs  test_hal.rs
