[package]
name = "paging"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = "0.8.0"

[features]
# This feature is needed for running integration test to exclude read/write of
# CR3 registers. cargo test --features "no-reg-rw"
no-reg-rw = []
std=[]


[dev-dependencies]
rand = "0.8"
